Scroll down fab added to chat panel. Fab is visible when the chat recycler view isn't showing the last message. Fab visibility transitions are animated. Clicking on fab will scroll down (and will make it disappear).

--- a/app/src/main/res/layout/fragment_send_messages.xml
+++ b/app/src/main/res/layout/fragment_send_messages.xml
@@ -18,7 +18,7 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="@dimen/fab_normal"
+            android:layout_height="@dimen/fab_big"
             android:layout_weight="1"
             android:background="@drawable/message_balloon"
             android:orientation="horizontal">
@@ -26,7 +26,7 @@
             <EditText
                 android:id="@+id/send_text_message_view"
                 android:layout_width="0dp"
-                android:layout_height="@dimen/fab_normal"
+                android:layout_height="@dimen/fab_big"
                 android:layout_weight="1"
                 android:background="@android:color/transparent"
                 android:hint="@string/text_message_hint"
