--- a/app/src/main/res/layout/activity_main_content.xml
+++ b/app/src/main/res/layout/activity_main_content.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.sothree.slidinguppanel.SlidingUpPanelLayout
-    android:id="@+id/activity_main_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.sothree.slidinguppanel.SlidingUpPanelLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:sothree="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
@@ -18,18 +17,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/main.appbar"
-            android:layout_width="match_parent"
+        <fragment
+            android:id="@+id/main_activity_toolbar_fragment"
+            android:name="com.teamagam.gimelgimel.app.mainActivity.view.ToolbarFragment"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-            <android.support.v7.widget.Toolbar
-                android:id="@+id/main_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
-        </android.support.design.widget.AppBarLayout>
+            tools:layout="@layout/fragment_toolbar" />
 
         <RelativeLayout
             android:id="@+id/main_activity_main_content"
@@ -38,7 +31,7 @@
             android:layout_marginTop="?attr/actionBarSize"
             android:animateLayoutChanges="true">
 
-            <include layout="@layout/alerts_text_views"/>
+            <include layout="@layout/alerts_text_views" />
 
             <fragment
                 android:id="@+id/viewer_layout"
@@ -46,7 +39,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:ignore="MergeRootFrame"
-                tools:layout="@layout/fragment_viewer"/>
+                tools:layout="@layout/fragment_viewer" />
 
         </RelativeLayout>
     </android.support.design.widget.CoordinatorLayout>
@@ -67,7 +60,7 @@
             app:pstsIndicatorColor="@color/blue"
             app:pstsShouldExpand="true"
             app:pstsTabTextAllCaps="true"
-            app:pstsUnderlineColor="@color/black"/>
+            app:pstsUnderlineColor="@color/black" />
 
         <android.support.v4.view.ViewPager
             android:id="@+id/bottom_swiping_panel"
