--- a/app/src/main/res/layout/fragment_action_draw_bottom_panel.xml
+++ b/app/src/main/res/layout/fragment_action_draw_bottom_panel.xml
@@ -1,19 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:orientation="horizontal">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 
     <Button
         android:id="@+id/action_draw_cancel"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:background="@color/gray_light"
+        tools:text="cancel" />
+
+    <View
+        android:layout_width="2dp"
+        android:layout_height="match_parent" />
 
     <Button
         android:id="@+id/action_draw_positive"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:background="@color/gray_light"
+        tools:text="OK" />
 
 </LinearLayout>
