BaseMapViewModel will register to all the displaying interactors. This ViewModel is needed (or a subclass of it) for fragments implementing BaseDrawActionFragment.

--- a/app/src/main/res/layout/fragment_example_draw_action.xml
+++ b/app/src/main/res/layout/fragment_example_draw_action.xml
@@ -5,6 +5,7 @@
               android:layout_height="match_parent">
 
     <com.teamagam.gimelgimel.app.map.esri.EsriGGMapView
+        android:id="@+id/example_draw_action_map_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
