--- a/app/src/main/res/layout/fragment_send_quadrilateral.xml
+++ b/app/src/main/res/layout/fragment_send_quadrilateral.xml
@@ -24,33 +24,44 @@
             android:id="@+id/send_quadrilateral_action_long_lat1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            horizontallonglatpicker:label="Point 1" />
+            horizontallonglatpicker:label="@string/send_quadrilateral_lnglatpicker1_label" />
 
         <com.teamagam.gimelgimel.app.common.base.view.HorizontalLongLatPicker
             android:id="@+id/send_quadrilateral_action_long_lat2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            horizontallonglatpicker:label="Point 2" />
+            horizontallonglatpicker:label="@string/send_quadrilateral_lnglatpicker2_label" />
 
         <com.teamagam.gimelgimel.app.common.base.view.HorizontalLongLatPicker
             android:id="@+id/send_quadrilateral_action_long_lat3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            horizontallonglatpicker:label="Point 3" />
+            horizontallonglatpicker:label="@string/send_quadrilateral_lnglatpicker3_label" />
 
         <com.teamagam.gimelgimel.app.common.base.view.HorizontalLongLatPicker
             android:id="@+id/send_quadrilateral_action_long_lat4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            horizontallonglatpicker:label="Point 4" />
+            horizontallonglatpicker:label="@string/send_quadrilateral_lnglatpicker4_label" />
 
-        <Button
-            android:id="@+id/send_quadrilateral_action_show_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="@string/send_quadrilateral_action_show_button" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+            <EditText
+                android:id="@+id/send_quadrilateral_description_edit_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:hint="@string/description"
+                android:textSize="@dimen/text_size_medium" />
+
+            <Button
+                android:id="@+id/send_quadrilateral_action_show_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/send_quadrilateral_action_show_button" />
+        </LinearLayout>
     </LinearLayout>
 
     <com.teamagam.gimelgimel.app.map.esri.EsriGGMapView
