--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,5 +32,7 @@
     <dimen name="image_preview_size">180dp</dimen>
     <dimen name="geo_panel_icon_size">35dp</dimen>
     <dimen name="message_content_minimum_width">200dp</dimen>
+    <dimen name="text_size_medium">20sp</dimen>
+    <dimen name="text_size_large">30sp</dimen>
 
 </resources>
