Changed the name of the color in colors.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,8 +46,8 @@
     <!--Whatsapp colors-->
     <color name="message_alert_bg_color">#F44336</color>
 
-    <!--Alerts informing animation-->
-    <color name="alerts_informing_peak_color">@color/red</color>
+    <!--Alerts informing-->
+    <color name="alerter_background_color">@color/red</color>
 
 
 </resources>
