Refactored and rearranged strings.xml

--- a/app/src/main/res/layout/fragment_send_quadrilateral.xml
+++ b/app/src/main/res/layout/fragment_send_quadrilateral.xml
@@ -57,7 +57,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="@string/description"
+                android:hint="@string/add_description"
                 android:textSize="@dimen/text_size_medium" />
 
             <Button
