support RTL layouts

--- a/app/src/main/res/layout/dialog_send_geo_message.xml
+++ b/app/src/main/res/layout/dialog_send_geo_message.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:tools="http://schemas.android.com/tools"
+    >
 
     <data>
 
         <variable
             name="viewModel"
-            type="com.teamagam.gimelgimel.app.message.viewModel.SendGeoMessageViewModel" />
+            type="com.teamagam.gimelgimel.app.message.viewModel.SendGeoMessageViewModel"/>
     </data>
 
     <LinearLayout
@@ -19,11 +20,13 @@
             android:id="@+id/dialog_send_geo_message_text"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:textAlignment="center"
             android:fontFamily="serif"
-            android:paddingLeft="20dp"
+            android:paddingStart="20dp"
             android:paddingTop="20dp"
             android:text="@{@string/geo_dd_format(viewModel.point.latitude, viewModel.point.longitude)}"
-            android:textSize="36px" />
+            tools:text="N: 32.041250 E: 34.792995"
+            android:textSize="36px"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -32,13 +35,14 @@
 
             <EditText
                 android:id="@+id/dialog_send_geo_message_edit_text"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start|center"
                 android:fontFamily="serif"
-                android:hint="Please describe the location..."
-                android:paddingLeft="20dp"
-                android:text="@={viewModel.text}" />
+                android:hint="@string/dialog_message_geo_text"
+                android:paddingStart="20dp"
+                android:text="@={viewModel.text}"/>
 
             <Spinner
                 android:layout_width="wrap_content"
@@ -46,7 +50,7 @@
                 android:layout_gravity="end|center"
                 android:layout_marginEnd="8dp"
                 android:entries="@{viewModel.types}"
-                android:selectedItemPosition="@={viewModel.typeIdx}" />
+                android:selectedItemPosition="@={viewModel.typeIdx}"/>
         </LinearLayout>
 
     </LinearLayout>
