--- a/app/src/main/res/layout/recycler_message_list_item_self.xml
+++ b/app/src/main/res/layout/recycler_message_list_item_self.xml
@@ -7,7 +7,7 @@
     android:layout_marginBottom="@dimen/whatsapp_messages_spacing"
     android:layout_marginStart="@dimen/spacing_extra_small"
     android:layout_marginEnd="@dimen/spacing_extra_small"
-    android:gravity="end"
+    android:gravity="right"
     >
 
     <RelativeLayout
