--- a/app/src/main/res/values/style_fab.xml
+++ b/app/src/main/res/values/style_fab.xml
@@ -8,7 +8,7 @@
         <item name="fabSize">normal</item>
         <item name="backgroundTint">@color/fab_bg</item>
         <item name="rippleColor">@color/fab_ripple</item>
-        <item name="android:layout_marginRight">@dimen/spacing_normal</item>
+        <item name="android:layout_marginEnd">@dimen/spacing_normal</item>
         <item name="android:layout_marginBottom">@dimen/spacing_normal</item>
     </style>
 
