Changed the two buttons panel at the bottom of the draw action activity to a fab, which gets its drawable and its onClick handling from the main fragment.

--- a/app/src/main/res/layout/activity_action_draw.xml
+++ b/app/src/main/res/layout/activity_action_draw.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+              android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                 android:id="@+id/draw_action_fragment_container"
-                 android:layout_width="match_parent"
-                 android:layout_height="0dp"
-                 android:layout_weight="1">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1">
+
+        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                     android:id="@+id/draw_action_fragment_container"
+                     android:layout_width="match_parent"
+                     android:layout_height="match_parent">
+
+        </FrameLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:orientation="vertical">
+
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/draw_action_fab"
+                style="@style/fab"/>
+
+        </LinearLayout>
 
     </FrameLayout>
 
-    <fragment
-        android:id="@+id/fragment_bottom_panel"
-        android:name="com.teamagam.gimelgimel.app.map.view.DrawActionBottomPanelFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_action_draw_bottom_panel" />
 </LinearLayout>
