--- a/app/src/main/res/layout/fragment_send_quadrilateral.xml
+++ b/app/src/main/res/layout/fragment_send_quadrilateral.xml
@@ -77,18 +77,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|bottom"
-            android:orientation="vertical">
-
-            <android.support.design.widget.FloatingActionButton
-                android:id="@+id/fab_action_send_quadrilateral"
-                style="@style/fab"
-                android:src="@android:drawable/ic_menu_send" />
-
-        </LinearLayout>
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_action_send_quadrilateral"
+            style="@style/fab"
+            android:layout_gravity="bottom|end"
+            android:src="@android:drawable/ic_menu_send" />
 
     </FrameLayout>
 
