--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,5 +25,6 @@
     <dimen name="message_content_minimum_width">200dp</dimen>
     <dimen name="text_size_medium">20sp</dimen>
     <dimen name="text_size_large">30sp</dimen>
+    <dimen name="measure_cross_size">24dp</dimen>
 
 </resources>
