Renamed leftovers of HorizontalLongLatPicker to LongLatPicker. Added unsubscribing calls to BaseMapViewModel. Added data binding between the measure view and its view-model  Hook methods for viewmodel

--- a/app/src/main/res/layout/fragment_measure_action.xml
+++ b/app/src/main/res/layout/fragment_measure_action.xml
@@ -1,44 +1,56 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <FrameLayout
+    <data>
+
+        <variable
+            name="viewModel"
+            type="com.teamagam.gimelgimel.app.map.viewModel.MeasureActionViewModel" />
+    </data>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.8">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <com.teamagam.gimelgimel.app.map.esri.EsriGGMapView
-            android:id="@+id/measure_map_view"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="0dp"
+            android:layout_weight="0.8">
 
-        <android.support.v7.widget.AppCompatImageView
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_gravity="center"
-            android:tint="@color/blue"
-            app:srcCompat="@drawable/ic_location_cross" />
-    </FrameLayout>
+            <com.teamagam.gimelgimel.app.map.esri.EsriGGMapView
+                android:id="@+id/measure_map_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.2">
+            <android.support.v7.widget.AppCompatImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:tint="@color/blue"
+                app:srcCompat="@drawable/ic_location_cross" />
 
-        <android.support.design.widget.FloatingActionButton
-            android:id="@+id/measure_plus_fab"
-            style="@style/fab"
-            android:layout_gravity="end|center"
-            app:srcCompat="@drawable/ic_plus" />
+            <android.support.design.widget.FloatingActionButton
+                android:id="@+id/measure_plus_fab"
+                style="@style/fab"
+                android:layout_gravity="end|bottom"
+                android:onClick="@{() -> viewModel.onPlusClicked()}"
+                app:srcCompat="@drawable/ic_plus" />
+        </FrameLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            tools:text="SAMPLE TEXT DISTANCE 2KM" />
-    </FrameLayout>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.2">
 
-</LinearLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@={viewModel.bottomSheetText}"
+                tools:text="SAMPLE TEXT DISTANCE 2KM" />
+        </FrameLayout>
+
+    </LinearLayout>
+</layout>
