Renamed leftovers of HorizontalLongLatPicker to LongLatPicker. Added unsubscribing calls to BaseMapViewModel. Added data binding between the measure view and its view-model  Hook methods for viewmodel

--- a/app/src/main/res/layout/fragment_send_quadrilateral.xml
+++ b/app/src/main/res/layout/fragment_send_quadrilateral.xml
@@ -13,25 +13,25 @@
         android:orientation="vertical"
         android:padding="@dimen/spacing_small">
 
-        <com.teamagam.gimelgimel.app.common.base.view.HorizontalLongLatPicker
+        <com.teamagam.gimelgimel.app.common.base.view.LongLatPicker
             android:id="@+id/send_quadrilateral_action_long_lat1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             horizontallonglatpicker:label="@string/send_quadrilateral_lnglatpicker1_label" />
 
-        <com.teamagam.gimelgimel.app.common.base.view.HorizontalLongLatPicker
+        <com.teamagam.gimelgimel.app.common.base.view.LongLatPicker
             android:id="@+id/send_quadrilateral_action_long_lat2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             horizontallonglatpicker:label="@string/send_quadrilateral_lnglatpicker2_label" />
 
-        <com.teamagam.gimelgimel.app.common.base.view.HorizontalLongLatPicker
+        <com.teamagam.gimelgimel.app.common.base.view.LongLatPicker
             android:id="@+id/send_quadrilateral_action_long_lat3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             horizontallonglatpicker:label="@string/send_quadrilateral_lnglatpicker3_label" />
 
-        <com.teamagam.gimelgimel.app.common.base.view.HorizontalLongLatPicker
+        <com.teamagam.gimelgimel.app.common.base.view.LongLatPicker
             android:id="@+id/send_quadrilateral_action_long_lat4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
