--- a/app/src/main/res/layout/dialog_send_geo_message.xml
+++ b/app/src/main/res/layout/dialog_send_geo_message.xml
@@ -22,8 +22,8 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:fontFamily="serif"
-            android:paddingStart="20dp"
-            android:paddingTop="20dp"
+            android:paddingStart="@dimen/spacing_normal"
+            android:paddingTop="@dimen/spacing_normal"
             android:text="@{@string/geo_dd_format(viewModel.point.latitude, viewModel.point.longitude)}"
             tools:text="N: 32.041250 E: 34.792995"
             android:textSize="36px"/>
@@ -41,14 +41,14 @@
                 android:layout_gravity="start|center"
                 android:fontFamily="serif"
                 android:hint="@string/dialog_message_geo_text"
-                android:paddingStart="20dp"
+                android:paddingStart="@dimen/spacing_normal"
                 android:text="@={viewModel.text}"/>
 
             <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end|center"
-                android:layout_marginEnd="8dp"
+                android:layout_marginEnd="@dimen/spacing_small"
                 android:entries="@{viewModel.types}"
                 android:selectedItemPosition="@={viewModel.typeIdx}"/>
         </LinearLayout>
