--- a/app/src/main/res/layout/fragment_measure_action.xml
+++ b/app/src/main/res/layout/fragment_measure_action.xml
@@ -45,10 +45,11 @@
             android:layout_weight="0.2">
 
             <TextView
+                style="@style/Base.TextAppearance.AppCompat.Display1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@={viewModel.bottomSheetText}"
+                android:text="@{@string/measure_distance_format(viewModel.distanceMeters)}"
                 tools:text="SAMPLE TEXT DISTANCE 2KM" />
         </FrameLayout>
 
