Added util func to project points from/to utm in order to use when interacting with users. THE APP SHOULD USE ONLY THE GEO COORDINATE SYSTEM ALL ALONG, EXCEPT FOR WHEN GETTING/SHOWING POINTS FROM/TO THE USER. Immediately project every point that goes through the app to GEO. As for now you need to manually configure the use of UTM in the Constants class.
BEWARE :)

--- a/app/src/main/res/layout/dialog_send_geo_message.xml
+++ b/app/src/main/res/layout/dialog_send_geo_message.xml
@@ -24,7 +24,7 @@
             android:fontFamily="serif"
             android:paddingStart="@dimen/spacing_normal"
             android:paddingTop="@dimen/spacing_normal"
-            android:text="@{@string/geo_dd_format(viewModel.point.latitude, viewModel.point.longitude)}"
+            android:text="@{viewModel.getFormattedPoint}"
             tools:text="N: 32.041250 E: 34.792995"
             android:textSize="36px"/>
 
