--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,8 +4,9 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
     <item
-        android:id="@+id/action_coordinate_system"
+        android:id="@+id/action_use_utm"
         android:orderInCategory="1"
-        android:title="@string/menu_coordinate_system_title"
+        android:title="@string/menu_use_utm_title"
+        android:checkable="true"
         app:showAsAction="never" />
 </menu>
