Send quadrilateral changes 1. History button (loads values from persistent storage of the last partially filled form) 2. Changed the colors of the input fields (and the toolbar)

--- a/app/src/main/res/layout/activity_action_draw.xml
+++ b/app/src/main/res/layout/activity_action_draw.xml
@@ -11,14 +11,12 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        android:theme="@style/LightToolbar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <FrameLayout
         android:id="@+id/draw_action_fragment_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </FrameLayout>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
