--- a/app/src/main/res/layout/fragment_send_quadrilateral.xml
+++ b/app/src/main/res/layout/fragment_send_quadrilateral.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="@color/gray_light"
         android:elevation="2dp"
         android:orientation="vertical"
         android:padding="@dimen/spacing_small">
@@ -58,7 +58,17 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:hint="@string/add_description"
+                android:maxLines="3"
                 android:textSize="@dimen/text_size_medium" />
+
+            <android.support.v7.widget.AppCompatImageView
+                android:id="@+id/restore_history_image_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginEnd="@dimen/spacing_small"
+                android:tint="@color/black"
+                longlatpicker:srcCompat="@drawable/ic_history" />
 
             <Button
                 android:id="@+id/send_quadrilateral_action_show_button"
