--- a/app/src/main/res/layout/recycler_message_list_item_alert.xml
+++ b/app/src/main/res/layout/recycler_message_list_item_alert.xml
@@ -1,22 +1,18 @@
-<RelativeLayout
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/recycler_message_listitem_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="@dimen/whatsapp_messages_spacing"
     android:layout_marginEnd="@dimen/spacing_extra_small"
     android:layout_marginStart="@dimen/spacing_extra_small"
-    android:gravity="left"
-    >
+    android:gravity="left">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/balloon_incoming_normal"
-        android:backgroundTint="@color/message_alert_bg_color"
-        >
+        android:background="@drawable/balloon_incoming_alert">
 
-        <include layout="@layout/recycler_message_list_item_content"/>
+        <include layout="@layout/recycler_message_list_item_content" />
     </RelativeLayout>
 
 </RelativeLayout>
