--- a/app/src/main/res/layout/fragment_send_geometry.xml
+++ b/app/src/main/res/layout/fragment_send_geometry.xml
@@ -1,12 +1,10 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
-
   <data>
-
     <variable
         name="viewModel"
-        type="com.teamagam.gimelgimel.app.map.viewModel.MeasureActionViewModel"
+        type="com.teamagam.gimelgimel.app.map.viewModel.SendGeometryViewModel"
         />
   </data>
 
@@ -37,33 +35,43 @@
           >
 
         <android.support.v7.widget.AppCompatImageView
-            android:layout_width="@dimen/send_geometry_switch_image_size"
-            android:layout_height="@dimen/send_geometry_switch_image_size"
+            android:layout_width="@dimen/image_button_dimension_big"
+            android:layout_height="@dimen/image_button_dimension_big"
             android:padding="@dimen/spacing_small"
             app:srcCompat="@drawable/ic_polyline"
             />
 
-        <Switch
+        <android.support.v7.widget.SwitchCompat
             android:id="@+id/send_geometry_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:onCheckedChanged="@{(switch,checked) -> viewModel.onSwitchChanged(checked)}"
             />
 
         <android.support.v7.widget.AppCompatImageView
-            android:layout_width="@dimen/send_geometry_switch_image_size"
-            android:layout_height="@dimen/send_geometry_switch_image_size"
+            android:layout_width="@dimen/image_button_dimension_big"
+            android:layout_height="@dimen/image_button_dimension_big"
             android:padding="@dimen/spacing_small"
             app:srcCompat="@drawable/ic_polygon"
             />
 
         <EditText
-            android:id="@+id/send_quadrilateral_description_edit_text"
+            android:id="@+id/send_geometry_description_edit_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="@string/add_description"
             android:maxLines="3"
+            android:text="@={viewModel.description}"
             android:textSize="@dimen/text_size_medium"
+            />
+
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/send_geometry_undo_image"
+            android:layout_width="@dimen/image_button_dimension_medium"
+            android:layout_height="@dimen/image_button_dimension_medium"
+            android:onClick="@{() -> viewModel.onUndoClicked()}"
+            app:srcCompat="@drawable/ic_undo"
             />
       </LinearLayout>
     </LinearLayout>
@@ -75,19 +83,19 @@
         android:layout_weight="0.8"
         >
       <com.teamagam.gimelgimel.app.map.esri.EsriGGMapView
+          android:id="@+id/send_geometry_mapview"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           />
 
       <android.support.design.widget.FloatingActionButton
-          android:id="@+id/fab_action_send_quadrilateral"
+          android:id="@+id/send_geometry_send_fab"
           android:layout_gravity="bottom|end"
+          android:onClick="@{() -> viewModel.onSendFabClicked()}"
           android:src="@android:drawable/ic_menu_send"
           style="@style/fab"
           />
 
     </FrameLayout>
-
   </LinearLayout>
-
 </layout>
