--- a/app/src/main/res/layout/alerts_text_views.xml
+++ b/app/src/main/res/layout/alerts_text_views.xml
@@ -8,7 +8,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentEnd="false"
-      android:background="@color/red"
+      android:background="@color/themeRed"
       android:text="@string/alert_no_gps_signal"
       android:textAlignment="center"
       android:textColor="@color/white"
