--- a/app/src/main/res/layout/fragment_messages_master_list.xml
+++ b/app/src/main/res/layout/fragment_messages_master_list.xml
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignBottom="@id/fragment_messages_recycler"
-            android:layout_alignEnd="@id/fragment_messages_recycler"
+            android:layout_alignRight="@id/fragment_messages_recycler"
             android:layout_margin="@dimen/spacing_small"
             android:alpha="0.5"
             android:onClick="@{() -> viewModel.onScrollDownFabClicked()}"
