--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
   <color name="themeBlue">#76afcf</color>
   <color name="themePink">#dd6495</color>
   <color name="themeTeal">#72d3b4</color>
+  <color name="themeGray">#757575</color>
 
 
   <color name="transparent">#00000000</color>
@@ -31,7 +32,6 @@
   <color name="green">#27D34D</color>
   <color name="blue">#2A91BD</color>
   <color name="orange">#FF9D2F</color>
-  <color name="red">#FF432F</color>
 
   <!--FAB colors-->
   <color name="fab_bg">@color/colorPrimary</color>
@@ -49,15 +49,15 @@
   <color name="selection_color">#603F51B5</color>
 
   <!--MessageApp Notifications -->
-  <color name="message_notification_error">@color/red</color>
+  <color name="message_notification_error">@color/themeRed</color>
   <color name="message_notification_success">@color/green</color>
   <color name="message_notification_sending">@color/colorPrimary</color>
 
   <!--Whatsapp colors-->
-  <color name="message_alert_bg_color">#F44336</color>
+  <color name="message_alert_bg_color">@color/themeRed</color>
 
   <!--Alerts informing-->
-  <color name="alerter_background_color">@color/red</color>
+  <color name="alerter_background_color">@color/themeRed</color>
 
 
 </resources>
