Completed drawer new UX.
All the drawer lists have their own adapter that is used when the tab is changed.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,5 +27,6 @@
   <dimen name="text_size_medium">20sp</dimen>
   <dimen name="text_size_large">30sp</dimen>
   <dimen name="measure_cross_size">24dp</dimen>
+  <dimen name="small_elevation">2dp</dimen>
 
 </resources>
