--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -27,6 +27,7 @@
   <dimen name="text_size_medium">20sp</dimen>
   <dimen name="text_size_large">30sp</dimen>
   <dimen name="measure_cross_size">24dp</dimen>
+  <dimen name="small_elevation">2dp</dimen>
 
   <!--Image buttons dimensions -->
   <dimen name="image_button_dimension_medium">36dp</dimen>
