Extracted MainActivity menu handling to its dedicated class - MainOptionsMenu. Added support for a new action on debug mode - Clear VL Cache This action deletes all the vector layers form the disk and notifies through a toast to the user (developer) if the operation succeeded / failed.

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
   <item
-      android:id="@+id/action_use_utm"
+      android:id="@+id/menu_item_use_utm"
       android:checkable="true"
       android:orderInCategory="1"
       android:title="@string/menu_use_utm_title"
