Added settings option to choose whether to notify all messages or only alerts (it's an old fashioned checkable item, when moving to the new settings activity this should be changed).

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -9,4 +9,10 @@
       android:orderInCategory="1"
       android:title="@string/menu_use_utm_title"
       app:showAsAction="never"/>
+  <item
+      android:id="@+id/menu_item_only_alerts"
+      android:checkable="true"
+      android:orderInCategory="1"
+      android:title="@string/menu_only_alerts_title"
+      app:showAsAction="never"/>
 </menu>
