Settings activity from template integrated into app.

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity">
   <item
-      android:id="@+id/menu_item_use_utm"
-      android:checkable="true"
+      android:id="@+id/menu_item_settings"
       android:orderInCategory="1"
-      android:title="@string/menu_use_utm_title"
-      app:showAsAction="never"/>
+      android:title="@string/menu_item_settings_title"
+      app:showAsAction="never"
+      />
 </menu>
